On the way to fixing z-index footer issue

--- a/css/style.css
+++ b/css/style.css
@@ -162,10 +162,14 @@ section#article {
   position: fixed;
   bottom: 0;
   left: 0;
-  z-index: 2;
+  z-index: 0;
   width: 100%;
   height: 250px;
   background-color: #f5f5f5;
+}
+
+section#article, .header, header, section#main, section#trias, section#resources {
+	z-index: 50;
 }
 
 /*
@@ -749,7 +753,7 @@ h1.guide {
   z-index: 1;
   width: 80%;
   min-width: 700px;
-  height: 48px;
+  height: 58px;
   margin: auto;
 }
 
@@ -790,10 +794,6 @@ p.microcopy {
 .image-2 {
   width: 900px;
   margin-left: -100px;
-}
-
-#footer-cta {
-	 z-index: -1;
 }
 
 @media(max-width: 900px) {
